Cherry-pick r271536. rdar://problem/73477501

AX: increment/decrement synthetic arrow events don't work in ARIA slider examples
    https://bugs.webkit.org/show_bug.cgi?id=220626
    <rdar://problem/73228924>

    Reviewed by Zalan Bujtas.

    Source/WebCore:

    keyCode is still expected to be filled in with standard codes for arrow keys.

    Updated test: accessibility/keyevents-posted-for-increment-actions.html

    * accessibility/AccessibilityNodeObject.cpp:
    (WebCore::AccessibilityNodeObject::postKeyboardKeysForValueChange):

    LayoutTests:

    * accessibility/keyevents-posted-for-increment-actions-expected.txt:
    * accessibility/keyevents-posted-for-increment-actions.html:

    Canonical link: https://commits.webkit.org/233082@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271536 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.46@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@271848 268f45cc-cd09-0410-ab3c-d52691b4dbfc